<resources>
    <string name="app_name">Save Birds</string>
    <string name="textViewMenuItem">Menu Item</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="txtViewTitleBeFamiliar1">Be Familiar</string>
    <string name="txtViewTitleBeFamiliar2">with</string>
    <string name="txtViewTitleBeFamiliar3">Precious WildLife</string>
    <string name="btnTxtShowBirds">SHOW BIRDS</string>
    <string name="initTxtPIC">PIC</string>
    <string name="txtViewTitleReportBird1">Report</string>
    <string name="txtViewTitleReportBird2">BIRD</string>
    <string name="descTxtViewReportBird">** If you find hurted bird, Please report here!</string>
    <string name="btnTxtImportImg">Import Image</string>
    <string name="btnTxtReportBird">REPORT</string>
    <string name="sampleImageTxt">**Sample Image</string>
    <string name="txtViewSubMenu1">"1. Reporter: "</string>
    <string name="txtViewSubMenu2">"2. Select Province: "</string>
    <string name="txtViewSubMenu3">"3. Select City: "</string>
    <string name="txtViewSubMenu4">"4. Enter detailed location: "</string>
    <string name="txtViewSubMenu5">"5. Upload Bird Image: "</string>
    <string name="hintTxtViewInputName">Please Enter Your Name</string>
    <string name="hintTxtViewInputLocation">Please Enter Your Detailed Location</string>
    <string name="sampleText">This is sample img</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtViewTitleBecomeVolunteer">Become</string>
    <string name="txtViewTitleBecomeVolunteer1">Become</string>
    <string name="txtViewTitleBecomeVolunteer2">Volunteer</string>
    <string name="textView3">Donate</string>
    <string name="txtViewFillForm">* Please, fill in the form *</string>
    <string name="txtViewLastName">Last Name:</string>
    <string name="txtViewFirstName">First Name:</string>
    <string name="hintFirstName">Enter your name here</string>
    <string name="hintLastName">Enter your last name here</string>
    <string name="radioButtonExperienceYes">Yes</string>
    <string name="txtViewEmail">Email Address:</string>
    <string name="hintEmail">Enter your email here</string>
    <string name="textViewQuestion">Do you have any previous volunteering experience?"</string>
    <string name="radioButtonExperienceNo">No</string>
    <string name="txtViewDescription">If yes, please describe your experience in a few words:</string>
    <string name="hintDescription">Please, describe your volunteer experience here</string>
    <string name="buttonUploadPhoto">Upload Photo</string>
    <string name="btnSubmitForm">SUBMIT FORM</string>
    <string name="txtViewDonateTitle">Please, help us to save a precious life!</string>
    <string name="txtViewName">Name</string>
    <string name="txtViewBreed">Breed</string>
    <string name="txtViewInjureType">Injure Type</string>
    <string name="txtViewMoneyNeed">Need for Treatment</string>
    <string name="txtViewMoneyDonated">Donated</string>
    <string name="txtViewMoneyLeft">Left to Collect</string>
    <string name="buttonDonate">Help today</string>
    <string name="textViewDonateSum">Please consider donation</string>
    <string name="hintDonateSum">Please put sum here</string>
    <string name="editTextDonateSum"> </string>
    <string name="buttonPressDonate">make donation with PayPal</string>
    <string name="buttonReturn">Return to main</string>
    <string name="descImgViewBird">This is bird image</string>
    <string name="btnViewDetail">View Detail</string>
    <string name="FbirdProvince">Habitat Province</string>
    <string name="FBirdName">Bird Name</string>
    <string name="FBirdCity">Habitat City</string>
    <string name="FBirdEtc">Description</string>
    <string name="textViewPayPalResults">results</string>
    <string name="textViewPayPalAmount">amount</string>
    <string name="textViewPayPalStatus">status</string>
    <string name="textViewPayPalResult">PayPal Summary</string>
    <string name="textViewThankYou">Thank you for your donation!</string>
    <string name="buttonReturnToMain">return to main page</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="register_here">Register Here!</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="no_experience">No Experience</string>
    <string name="email_not_provided">Email not provided</string>
    <string name="volunteer_name">Volunteer Name</string>
    <string name="_5_stars">5 Stars</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="do_you_have_any_previous_volunteering_experience">Do you have any previous volunteering experience?</string>
    <string name="if_yes_please_describe_your_experience_in_a_few_words">If yes, please describe your experience in a few words:</string>
    <string name="choose_a_photo">Choose a photo</string>
    <string name="submit_form">Submit Form</string>
    <string name="submit">Submit</string>
    <string name="write_something_about_the_injury_if_unsure_type_unknown">Write something about the injury, if unsure, type unknown</string>
    <string name="report_bird">Report Bird</string>
    <string name="place">Place</string>
    <string name="injury">Injury</string>
    <string name="species">Species</string>
    <string name="imageViewPatientDescription">patientImage</string>
    <string name="textViewSum1">textViewSum1</string>
    <string name="textViewSum2">textViewSum2</string>
    <string name="textViewSum3">textViewSum3</string>
</resources>